umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@ketcher_mol-1855-to-open-expected.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 7, col 31"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 7, col 31"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: "C22N+*2[L]2"
    atom_count: 27
    bond_count: 26
    extended_atoms: 4
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: "C22N+*2[L]2"
    atom_count: 27
    bond_count: 26
    extended_atoms: 4
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
