umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@ketcher_multiple-structures.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule_lenient
category: extended_molecule_lenient
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 13, col 31"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 13, col 31"
extended_molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 13, col 31"
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: "C36N3O6PS*[L]"
    atom_count: 49
    bond_count: 53
    extended_atoms: 2
    extended_bonds: 3
    property_count: 1
    rgroup_count: 0
    sgroup_count: 0
